reference/5.1/Microsoft.PowerShell.Core/About/about_Language_Keywords.md
---
description: PowerShell スクリプト言語のキーワードについて説明します。
keywords: powershell,コマンドレット
Locale: en-US
ms.date: 10/06/2020
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.core/about/about_language_keywords?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: about_Language_Keywords
ms.openlocfilehash: 6d59d0ac58eb5d2ddecc69be97b1ccebaca58195
ms.sourcegitcommit: f874dc1d4236e06a3df195d179f59e0a7d9f8436
ms.translationtype: MT
ms.contentlocale: ja-JP
ms.lasthandoff: 10/13/2020
ms.locfileid: "93222720"
---
# <a name="about-language-keywords"></a><span data-ttu-id="970a5-104">言語のキーワードについて</span><span class="sxs-lookup"><span data-stu-id="970a5-104">About Language Keywords</span></span>

## <a name="short-description"></a><span data-ttu-id="970a5-105">概要</span><span class="sxs-lookup"><span data-stu-id="970a5-105">SHORT DESCRIPTION</span></span>
<span data-ttu-id="970a5-106">PowerShell スクリプト言語のキーワードについて説明します。</span><span class="sxs-lookup"><span data-stu-id="970a5-106">Describes the keywords in the PowerShell scripting language.</span></span>

## <a name="long-description"></a><span data-ttu-id="970a5-107">詳細説明</span><span class="sxs-lookup"><span data-stu-id="970a5-107">LONG DESCRIPTION</span></span>

<span data-ttu-id="970a5-108">PowerShell には、次の言語キーワードがあります。</span><span class="sxs-lookup"><span data-stu-id="970a5-108">PowerShell has the following language keywords.</span></span> <span data-ttu-id="970a5-109">詳細については、キーワードの about トピックと、表の後にある情報を参照してください。</span><span class="sxs-lookup"><span data-stu-id="970a5-109">For more information, see the about topic for the keyword and the information that follows the table.</span></span>

<span data-ttu-id="970a5-110">Keyword</span><span class="sxs-lookup"><span data-stu-id="970a5-110">Keyword</span></span>     | <span data-ttu-id="970a5-111">リファレンス</span><span class="sxs-lookup"><span data-stu-id="970a5-111">Reference</span></span>
---         | ---
<span data-ttu-id="970a5-112">開始</span><span class="sxs-lookup"><span data-stu-id="970a5-112">Begin</span></span>       | <span data-ttu-id="970a5-113">[about_Functions](about_Functions.md)、 [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-113">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="970a5-114">分解</span><span class="sxs-lookup"><span data-stu-id="970a5-114">Break</span></span>       | <span data-ttu-id="970a5-115">[about_Break](about_Break.md)、 [about_Trap](about_Trap.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-115">[about_Break](about_Break.md), [about_Trap](about_Trap.md)</span></span>
<span data-ttu-id="970a5-116">キャッチ</span><span class="sxs-lookup"><span data-stu-id="970a5-116">Catch</span></span>       | [<span data-ttu-id="970a5-117">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="970a5-117">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="970a5-118">クラス</span><span class="sxs-lookup"><span data-stu-id="970a5-118">Class</span></span>       | [<span data-ttu-id="970a5-119">about_Classes</span><span class="sxs-lookup"><span data-stu-id="970a5-119">about_Classes</span></span>](about_Classes.md)
<span data-ttu-id="970a5-120">続行</span><span class="sxs-lookup"><span data-stu-id="970a5-120">Continue</span></span>    | <span data-ttu-id="970a5-121">[about_Continue](about_Continue.md)、 [about_Trap](about_Trap.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-121">[about_Continue](about_Continue.md), [about_Trap](about_Trap.md)</span></span>
<span data-ttu-id="970a5-122">Data</span><span class="sxs-lookup"><span data-stu-id="970a5-122">Data</span></span>        | [<span data-ttu-id="970a5-123">about_Data_Sections</span><span class="sxs-lookup"><span data-stu-id="970a5-123">about_Data_Sections</span></span>](about_Data_Sections.md)
<span data-ttu-id="970a5-124">定義</span><span class="sxs-lookup"><span data-stu-id="970a5-124">Define</span></span>      | <span data-ttu-id="970a5-125">予約済み</span><span class="sxs-lookup"><span data-stu-id="970a5-125">Reserved for future use</span></span>
<span data-ttu-id="970a5-126">推奨</span><span class="sxs-lookup"><span data-stu-id="970a5-126">Do</span></span>          | <span data-ttu-id="970a5-127">[about_Do](about_Do.md)、 [about_While](about_While.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-127">[about_Do](about_Do.md), [about_While](about_While.md)</span></span>
<span data-ttu-id="970a5-128">DynamicParam</span><span class="sxs-lookup"><span data-stu-id="970a5-128">DynamicParam</span></span>| [<span data-ttu-id="970a5-129">about_Functions_Advanced_Parameters</span><span class="sxs-lookup"><span data-stu-id="970a5-129">about_Functions_Advanced_Parameters</span></span>](about_Functions_Advanced_Parameters.md)
<span data-ttu-id="970a5-130">Else</span><span class="sxs-lookup"><span data-stu-id="970a5-130">Else</span></span>        | [<span data-ttu-id="970a5-131">about_If</span><span class="sxs-lookup"><span data-stu-id="970a5-131">about_If</span></span>](about_If.md)
<span data-ttu-id="970a5-132">Elseif</span><span class="sxs-lookup"><span data-stu-id="970a5-132">Elseif</span></span>      | [<span data-ttu-id="970a5-133">about_If</span><span class="sxs-lookup"><span data-stu-id="970a5-133">about_If</span></span>](about_If.md)
<span data-ttu-id="970a5-134">End</span><span class="sxs-lookup"><span data-stu-id="970a5-134">End</span></span>         | <span data-ttu-id="970a5-135">[about_Functions](about_Functions.md)、 [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-135">[about_Functions](about_Functions.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span></span>
<span data-ttu-id="970a5-136">列挙型</span><span class="sxs-lookup"><span data-stu-id="970a5-136">Enum</span></span>        | [<span data-ttu-id="970a5-137">about_Enum</span><span class="sxs-lookup"><span data-stu-id="970a5-137">about_Enum</span></span>](about_Enum.md)
<span data-ttu-id="970a5-138">終了</span><span class="sxs-lookup"><span data-stu-id="970a5-138">Exit</span></span>        | [<span data-ttu-id="970a5-139">このトピックで説明します。</span><span class="sxs-lookup"><span data-stu-id="970a5-139">Described in this topic</span></span>](#exit)
<span data-ttu-id="970a5-140">Assert</span><span class="sxs-lookup"><span data-stu-id="970a5-140">Filter</span></span>      | [<span data-ttu-id="970a5-141">about_Functions</span><span class="sxs-lookup"><span data-stu-id="970a5-141">about_Functions</span></span>](about_Functions.md)
<span data-ttu-id="970a5-142">Finally</span><span class="sxs-lookup"><span data-stu-id="970a5-142">Finally</span></span>     | [<span data-ttu-id="970a5-143">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="970a5-143">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="970a5-144">For</span><span class="sxs-lookup"><span data-stu-id="970a5-144">For</span></span>         | [<span data-ttu-id="970a5-145">about_For</span><span class="sxs-lookup"><span data-stu-id="970a5-145">about_For</span></span>](about_For.md)
<span data-ttu-id="970a5-146">ForEach</span><span class="sxs-lookup"><span data-stu-id="970a5-146">ForEach</span></span>     | [<span data-ttu-id="970a5-147">about_ForEach</span><span class="sxs-lookup"><span data-stu-id="970a5-147">about_ForEach</span></span>](about_ForEach.md)
<span data-ttu-id="970a5-148">ソース</span><span class="sxs-lookup"><span data-stu-id="970a5-148">From</span></span>        | <span data-ttu-id="970a5-149">予約済み</span><span class="sxs-lookup"><span data-stu-id="970a5-149">Reserved for future use</span></span>
<span data-ttu-id="970a5-150">機能</span><span class="sxs-lookup"><span data-stu-id="970a5-150">Function</span></span>    | <span data-ttu-id="970a5-151">[about_Functions](about_Functions.md)、 [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-151">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="970a5-152">[非表示]</span><span class="sxs-lookup"><span data-stu-id="970a5-152">Hidden</span></span>      | [<span data-ttu-id="970a5-153">about_Hidden</span><span class="sxs-lookup"><span data-stu-id="970a5-153">about_Hidden</span></span>](about_Hidden.md)
<span data-ttu-id="970a5-154">If</span><span class="sxs-lookup"><span data-stu-id="970a5-154">If</span></span>          | [<span data-ttu-id="970a5-155">about_If</span><span class="sxs-lookup"><span data-stu-id="970a5-155">about_If</span></span>](about_If.md)
<span data-ttu-id="970a5-156">/</span><span class="sxs-lookup"><span data-stu-id="970a5-156">In</span></span>          | [<span data-ttu-id="970a5-157">about_ForEach</span><span class="sxs-lookup"><span data-stu-id="970a5-157">about_ForEach</span></span>](about_ForEach.md)
<span data-ttu-id="970a5-158">InlineScript</span><span class="sxs-lookup"><span data-stu-id="970a5-158">InlineScript</span></span>| [<span data-ttu-id="970a5-159">about_InlineScript</span><span class="sxs-lookup"><span data-stu-id="970a5-159">about_InlineScript</span></span>](../../PSWorkflow/About/about_InlineScript.md)
<span data-ttu-id="970a5-160">Param</span><span class="sxs-lookup"><span data-stu-id="970a5-160">Param</span></span>       | [<span data-ttu-id="970a5-161">about_Functions</span><span class="sxs-lookup"><span data-stu-id="970a5-161">about_Functions</span></span>](about_Functions.md)
<span data-ttu-id="970a5-162">プロセス</span><span class="sxs-lookup"><span data-stu-id="970a5-162">Process</span></span>     | <span data-ttu-id="970a5-163">[about_Functions](about_Functions.md)、 [about_Functions_Advanced](about_Functions_Advanced.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-163">[about_Functions](about_Functions.md), [about_Functions_Advanced](about_Functions_Advanced.md)</span></span>
<span data-ttu-id="970a5-164">戻り値</span><span class="sxs-lookup"><span data-stu-id="970a5-164">Return</span></span>      | [<span data-ttu-id="970a5-165">about_Return</span><span class="sxs-lookup"><span data-stu-id="970a5-165">about_Return</span></span>](about_Return.md)
<span data-ttu-id="970a5-166">静的</span><span class="sxs-lookup"><span data-stu-id="970a5-166">Static</span></span>      | [<span data-ttu-id="970a5-167">about_Classes</span><span class="sxs-lookup"><span data-stu-id="970a5-167">about_Classes</span></span>](about_Classes.md)
<span data-ttu-id="970a5-168">Switch</span><span class="sxs-lookup"><span data-stu-id="970a5-168">Switch</span></span>      | [<span data-ttu-id="970a5-169">about_Switch</span><span class="sxs-lookup"><span data-stu-id="970a5-169">about_Switch</span></span>](about_Switch.md)
<span data-ttu-id="970a5-170">Throw</span><span class="sxs-lookup"><span data-stu-id="970a5-170">Throw</span></span>       | <span data-ttu-id="970a5-171">[about_Throw](about_Throw.md)、 [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-171">[about_Throw](about_Throw.md), [about_Functions_Advanced_Methods](about_Functions_Advanced_Methods.md)</span></span>
<span data-ttu-id="970a5-172">Trap</span><span class="sxs-lookup"><span data-stu-id="970a5-172">Trap</span></span>        | <span data-ttu-id="970a5-173">[about_Trap](about_Trap.md)、 [about_Break](about_Break.md)、 [about_Try_Catch_Finally](about_Try_Catch_Finally.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-173">[about_Trap](about_Trap.md), [about_Break](about_Break.md), [about_Try_Catch_Finally](about_Try_Catch_Finally.md)</span></span>
<span data-ttu-id="970a5-174">試す</span><span class="sxs-lookup"><span data-stu-id="970a5-174">Try</span></span>         | [<span data-ttu-id="970a5-175">about_Try_Catch_Finally</span><span class="sxs-lookup"><span data-stu-id="970a5-175">about_Try_Catch_Finally</span></span>](about_Try_Catch_Finally.md)
<span data-ttu-id="970a5-176">Until</span><span class="sxs-lookup"><span data-stu-id="970a5-176">Until</span></span>       | [<span data-ttu-id="970a5-177">about_Do</span><span class="sxs-lookup"><span data-stu-id="970a5-177">about_Do</span></span>](about_Do.md)
<span data-ttu-id="970a5-178">使用</span><span class="sxs-lookup"><span data-stu-id="970a5-178">Using</span></span>       | <span data-ttu-id="970a5-179">[about_Using](about_Using.md)、 [about_Classes](about_Classes.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-179">[about_Using](about_Using.md), [about_Classes](about_Classes.md)</span></span>
<span data-ttu-id="970a5-180">Var</span><span class="sxs-lookup"><span data-stu-id="970a5-180">Var</span></span>         | <span data-ttu-id="970a5-181">予約済み</span><span class="sxs-lookup"><span data-stu-id="970a5-181">Reserved for future use</span></span>
<span data-ttu-id="970a5-182">While</span><span class="sxs-lookup"><span data-stu-id="970a5-182">While</span></span>       | <span data-ttu-id="970a5-183">[about_While](about_While.md)、 [about_Do](about_Do.md)</span><span class="sxs-lookup"><span data-stu-id="970a5-183">[about_While](about_While.md), [about_Do](about_Do.md)</span></span>

<span data-ttu-id="970a5-184">言語キーワード</span><span class="sxs-lookup"><span data-stu-id="970a5-184">Language Keywords</span></span>

### <a name="begin"></a><span data-ttu-id="970a5-185">開始</span><span class="sxs-lookup"><span data-stu-id="970a5-185">Begin</span></span>

<span data-ttu-id="970a5-186">、、およびの各キーワードと共に、関数本体の1つの部分を指定し `DynamicParam` `Process` `End` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-186">Specifies one part of the body of a function, along with the `DynamicParam`, `Process`, and `End` keywords.</span></span> <span data-ttu-id="970a5-187">`Begin`ステートメントリストは、パイプラインからオブジェクトを受信する前に1回実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-187">The `Begin` statement list runs one time before any objects are received from the pipeline.</span></span>

<span data-ttu-id="970a5-188">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-188">Syntax:</span></span>

```Syntax
function <name> {
    DynamicParam {<statement list>}
    begin {<statement list>}
    process {<statement list>}
    end {<statement list>}
}
```

### <a name="break"></a><span data-ttu-id="970a5-189">分解</span><span class="sxs-lookup"><span data-stu-id="970a5-189">Break</span></span>

<span data-ttu-id="970a5-190">スクリプトでループを終了させます。</span><span class="sxs-lookup"><span data-stu-id="970a5-190">Causes a script to exit a loop.</span></span>

<span data-ttu-id="970a5-191">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-191">Syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
   ...

   break
   ...

   <statements>
}
```

### <a name="catch"></a><span data-ttu-id="970a5-192">キャッチ</span><span class="sxs-lookup"><span data-stu-id="970a5-192">Catch</span></span>

<span data-ttu-id="970a5-193">付随する Try ステートメントの一覧でエラーが発生した場合に実行するステートメントリストを指定します。</span><span class="sxs-lookup"><span data-stu-id="970a5-193">Specifies a statement list to run if an error occurs in the accompanying Try statement list.</span></span> <span data-ttu-id="970a5-194">エラーの種類には角かっこが必要です。</span><span class="sxs-lookup"><span data-stu-id="970a5-194">An error type requires brackets.</span></span> <span data-ttu-id="970a5-195">2番目のかっこのペアは、エラーの種類が省略可能であることを示します。</span><span class="sxs-lookup"><span data-stu-id="970a5-195">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="970a5-196">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-196">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [[<error type>]] {<statement list>}
```

### <a name="class"></a><span data-ttu-id="970a5-197">クラス</span><span class="sxs-lookup"><span data-stu-id="970a5-197">Class</span></span>

<span data-ttu-id="970a5-198">PowerShell の新しいクラスを指定します。</span><span class="sxs-lookup"><span data-stu-id="970a5-198">Specifies a new class in PowerShell.</span></span>

<span data-ttu-id="970a5-199">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-199">Syntax:</span></span>

```Syntax
class <class-name> {
    [[hidden] [static] <property-definition> ...]
    [<class-name>([argument-list>]) {<constructor-statement-list>} ...]
    [[hidden] [static] <method-definition> ...]
}
```

### <a name="continue"></a><span data-ttu-id="970a5-200">続行</span><span class="sxs-lookup"><span data-stu-id="970a5-200">Continue</span></span>

<span data-ttu-id="970a5-201">スクリプトがループの実行を停止し、条件に戻るようにします。</span><span class="sxs-lookup"><span data-stu-id="970a5-201">Causes a script to stop running a loop and to go back to the condition.</span></span> <span data-ttu-id="970a5-202">条件が満たされると、スクリプトはループを再び開始します。</span><span class="sxs-lookup"><span data-stu-id="970a5-202">If the condition is met, the script begins the loop again.</span></span>

<span data-ttu-id="970a5-203">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-203">Syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
   ...

   continue
   ...

   <statements>
}
```

### <a name="data"></a><span data-ttu-id="970a5-204">Data</span><span class="sxs-lookup"><span data-stu-id="970a5-204">Data</span></span>

<span data-ttu-id="970a5-205">スクリプトでは、は、スクリプトロジックからデータを分離するセクションを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-205">In a script, defines a section that isolates data from the script logic.</span></span> <span data-ttu-id="970a5-206">`If`ステートメントおよびいくつかの制限されたコマンドを含めることもできます。</span><span class="sxs-lookup"><span data-stu-id="970a5-206">Can also include `If` statements and some limited commands.</span></span>

<span data-ttu-id="970a5-207">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-207">Syntax:</span></span>

```Syntax
data <variable> [-supportedCommand <cmdlet-name>] {<permitted content>}
```

### <a name="do"></a><span data-ttu-id="970a5-208">推奨</span><span class="sxs-lookup"><span data-stu-id="970a5-208">Do</span></span>

<span data-ttu-id="970a5-209">`While`ループ構造として、キーワードまたはキーワードと共に使用され `Until` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-209">Used with the `While` or `Until` keyword as a looping construct.</span></span> <span data-ttu-id="970a5-210">を使用するループとは異なり、PowerShell では、ステートメントの一覧が少なくとも1回実行され `While` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-210">PowerShell runs the statement list at least one time, unlike a loop that uses `While`.</span></span>

<span data-ttu-id="970a5-211">`While` の構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-211">Syntax for `While`:</span></span>

```Syntax
do {<statement list>} while (<condition>)
```

<span data-ttu-id="970a5-212">`Until` の構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-212">Syntax for `Until`:</span></span>

```Syntax
do {<statement list>} until (<condition>)
```

### <a name="dynamicparam"></a><span data-ttu-id="970a5-213">DynamicParam</span><span class="sxs-lookup"><span data-stu-id="970a5-213">DynamicParam</span></span>

<span data-ttu-id="970a5-214">、、およびの各キーワードと共に、関数本体の1つの部分を指定し `Begin` `Process` `End` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-214">Specifies one part of the body of a function, along with the `Begin`, `Process`, and `End` keywords.</span></span> <span data-ttu-id="970a5-215">動的パラメーターは、実行時に追加されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-215">Dynamic parameters are added at run time.</span></span>

<span data-ttu-id="970a5-216">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-216">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="else"></a><span data-ttu-id="970a5-217">Else</span><span class="sxs-lookup"><span data-stu-id="970a5-217">Else</span></span>

<span data-ttu-id="970a5-218">`If`既定のステートメントリストを指定するためにキーワードと共に使用されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-218">Used with the `If` keyword to specify the default statement list.</span></span>

<span data-ttu-id="970a5-219">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-219">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
else {<statement list>}
```

### <a name="elseif"></a><span data-ttu-id="970a5-220">Elseif</span><span class="sxs-lookup"><span data-stu-id="970a5-220">Elseif</span></span>

<span data-ttu-id="970a5-221">`If`追加の条件を `Else` 指定するために、キーワードおよびキーワードと共に使用します。</span><span class="sxs-lookup"><span data-stu-id="970a5-221">Used with the `If` and `Else` keywords to specify additional conditionals.</span></span> <span data-ttu-id="970a5-222">`Else`キーワードは省略可能です。</span><span class="sxs-lookup"><span data-stu-id="970a5-222">The `Else` keyword is optional.</span></span>

<span data-ttu-id="970a5-223">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-223">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
elseif (<condition>) {<statement list>}
else {<statement list>}
```

### <a name="end"></a><span data-ttu-id="970a5-224">End</span><span class="sxs-lookup"><span data-stu-id="970a5-224">End</span></span>

<span data-ttu-id="970a5-225">、、およびの各キーワードと共に、関数本体の1つの部分を指定し `DynamicParam` `Begin` `End` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-225">Specifies one part of the body of a function, along with the `DynamicParam`, `Begin`, and `End` keywords.</span></span> <span data-ttu-id="970a5-226">ステートメントの一覧は、 `End` すべてのオブジェクトがパイプラインから受信された後に1回実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-226">The `End` statement list runs one time after all the objects have been received from the pipeline.</span></span>

<span data-ttu-id="970a5-227">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-227">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="enum"></a><span data-ttu-id="970a5-228">列挙型</span><span class="sxs-lookup"><span data-stu-id="970a5-228">Enum</span></span>

<span data-ttu-id="970a5-229">`enum` は、列挙型を宣言するために使用されます。列挙子リストと呼ばれる一連の名前付きラベルで構成される個別の型。</span><span class="sxs-lookup"><span data-stu-id="970a5-229">`enum` is used to declare an enumeration; a distinct type that consists of a set of named labels called the enumerator list.</span></span>

<span data-ttu-id="970a5-230">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-230">Syntax:</span></span>

```Syntax
enum <enum-name> {
    <label> [= <int-value>]
    ...
}
```

### <a name="exit"></a><span data-ttu-id="970a5-231">終了</span><span class="sxs-lookup"><span data-stu-id="970a5-231">Exit</span></span>

<span data-ttu-id="970a5-232">PowerShell でスクリプトまたは PowerShell インスタンスを終了させます。</span><span class="sxs-lookup"><span data-stu-id="970a5-232">Causes PowerShell to exit a script or a PowerShell instance.</span></span>

<span data-ttu-id="970a5-233">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-233">Syntax:</span></span>

```Syntax
exit
exit <exitcode>
```

<span data-ttu-id="970a5-234">ファイルパラメーターを指定してを使用する場合、 `powershell.exe` **File** `.ps1` (スクリプト) ファイル自体には、スクリプトの実行中に発生したエラーや例外を処理するための命令を含める必要があります。</span><span class="sxs-lookup"><span data-stu-id="970a5-234">When you use `powershell.exe` with the **File** parameter, the `.ps1` (script) file itself should include instructions for handling any errors or exceptions that occur while the script is running.</span></span> <span data-ttu-id="970a5-235">ステートメントは、 `exit` スクリプトの実行後の状態を示すためにのみ使用してください。</span><span class="sxs-lookup"><span data-stu-id="970a5-235">You should only use the `exit` statement to indicate the post-execution status of the script.</span></span>

<span data-ttu-id="970a5-236">との間には任意の数の数値 `[int]::MinValue` `[int]::MaxValue` を指定できます。</span><span class="sxs-lookup"><span data-stu-id="970a5-236">Any number between `[int]::MinValue` and `[int]::MaxValue` is allowed.</span></span>

<span data-ttu-id="970a5-237">PowerShell では、ステートメントによって `exit` 変数の値が設定され `$LASTEXITCODE` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-237">In PowerShell, the `exit` statement sets the value of the `$LASTEXITCODE` variable.</span></span> <span data-ttu-id="970a5-238">Windows コマンドシェル (cmd.exe) では、exit ステートメントによって環境変数の値が設定され `%ERRORLEVEL%` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-238">In the Windows Command Shell (cmd.exe), the exit statement sets the value of the `%ERRORLEVEL%` environment variable.</span></span>

<span data-ttu-id="970a5-239">数値以外、またはプラットフォーム固有の範囲外の引数は、の値に変換され `0` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-239">Any argument that is non-numeric or outside the platform-specific range is translated to the value of `0`.</span></span>

<span data-ttu-id="970a5-240">次の例では、ユーザーがスクリプトファイルにを追加して、エラーレベル変数の値を4に設定し `exit 4` `test.ps1` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-240">In the following example, the user sets the error level variable value to 4 by adding `exit 4` to the script file `test.ps1`.</span></span>

```cmd
C:\scripts\test>type test.ps1
1
2
3
exit 4

C:\scripts\test>powershell -file ./test.ps1
1
2
3

C:\scripts\test>echo %ERRORLEVEL%
4
```

<span data-ttu-id="970a5-241">を実行し、スクリプトファイルがコマンドで終了すると、 `pwsh.exe -File <path to a script>` `exit` 終了コードはコマンドで使用される数値引数に設定され `exit` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-241">When you run `pwsh.exe -File <path to a script>` and the script file terminates with an `exit` command, the exit code is set to the numeric argument used with the `exit` command.</span></span> <span data-ttu-id="970a5-242">スクリプトにステートメントがない場合 `exit` 、終了コードは常に `0` スクリプトがエラーなしで完了したとき、またはスクリプトがハンドルされない例外から終了したときに発生し `1` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-242">If the script has no `exit` statement, the exit code is always `0` when the script completes without error or `1` when the script terminates from an unhandled exception.</span></span>

### <a name="filter"></a><span data-ttu-id="970a5-243">Assert</span><span class="sxs-lookup"><span data-stu-id="970a5-243">Filter</span></span>

<span data-ttu-id="970a5-244">各入力オブジェクトに対してステートメントリストを1回実行する関数を指定します。</span><span class="sxs-lookup"><span data-stu-id="970a5-244">Specifies a function in which the statement list runs one time for each input object.</span></span> <span data-ttu-id="970a5-245">これは、プロセスブロックだけを含む関数と同じ効果があります。</span><span class="sxs-lookup"><span data-stu-id="970a5-245">It has the same effect as a function that contains only a Process block.</span></span>

<span data-ttu-id="970a5-246">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-246">Syntax:</span></span>

```Syntax
filter <name> {<statement list>}
```

### <a name="finally"></a><span data-ttu-id="970a5-247">Finally</span><span class="sxs-lookup"><span data-stu-id="970a5-247">Finally</span></span>

<span data-ttu-id="970a5-248">Try および Catch に関連付けられたステートメントの後に実行されるステートメントリストを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-248">Defines a statement list that runs after statements that are associated with Try and Catch.</span></span> <span data-ttu-id="970a5-249">ステートメントリストは、を押してスクリプトを終了した `Finally` 場合 `CTRL+C` や、スクリプトで Exit キーワードを使用した場合にも実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-249">A `Finally` statement list runs even if you press `CTRL+C` to leave a script or if you use the Exit keyword in the script.</span></span>

<span data-ttu-id="970a5-250">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-250">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [<error type>] {<statement list>}
finally {<statement list>}
```

### <a name="for"></a><span data-ttu-id="970a5-251">For</span><span class="sxs-lookup"><span data-stu-id="970a5-251">For</span></span>

<span data-ttu-id="970a5-252">条件を使用してループを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-252">Defines a loop by using a condition.</span></span>

<span data-ttu-id="970a5-253">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-253">Syntax:</span></span>

```Syntax
for (<initialize>; <condition>; <iterate>) { <statement list> }
```

### <a name="foreach"></a><span data-ttu-id="970a5-254">ForEach</span><span class="sxs-lookup"><span data-stu-id="970a5-254">ForEach</span></span>

<span data-ttu-id="970a5-255">コレクションの各メンバーを使用してループを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-255">Defines a loop by using each member of a collection.</span></span>

<span data-ttu-id="970a5-256">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-256">Syntax:</span></span>

```Syntax
ForEach (<item> in <collection>) { <statement list> }
```

### <a name="from"></a><span data-ttu-id="970a5-257">ソース</span><span class="sxs-lookup"><span data-stu-id="970a5-257">From</span></span>

<span data-ttu-id="970a5-258">将来使用するために予約されています。</span><span class="sxs-lookup"><span data-stu-id="970a5-258">Reserved for future use.</span></span>

### <a name="function"></a><span data-ttu-id="970a5-259">機能</span><span class="sxs-lookup"><span data-stu-id="970a5-259">Function</span></span>

<span data-ttu-id="970a5-260">再利用可能なコードの名前付きステートメントリストを作成します。</span><span class="sxs-lookup"><span data-stu-id="970a5-260">Creates a named statement list of reusable code.</span></span> <span data-ttu-id="970a5-261">関数が属するスコープに名前を指定できます。</span><span class="sxs-lookup"><span data-stu-id="970a5-261">You can name the scope a function belongs to.</span></span> <span data-ttu-id="970a5-262">また、キーワードを使用して、1つまたは複数の名前付きパラメーターを指定することもでき `Param` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-262">And, you can specify one or more named parameters by using the `Param` keyword.</span></span> <span data-ttu-id="970a5-263">Function ステートメントリスト内で、、、 `DynamicParam` `Begin` `Process` 、およびの各ステートメントリストを含めることができ `End` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-263">Within the function statement list, you can include `DynamicParam`, `Begin`, `Process`, and `End` statement lists.</span></span>

<span data-ttu-id="970a5-264">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-264">Syntax:</span></span>

```Syntax
function [<scope:>]<name> {
   param ([type]<$pname1> [, [type]<$pname2>])
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

<span data-ttu-id="970a5-265">また、関数名の後に1つ以上のパラメーターを定義するオプションもあります。</span><span class="sxs-lookup"><span data-stu-id="970a5-265">You also have the option of defining one or more parameters outside the statement list after the function name.</span></span>

<span data-ttu-id="970a5-266">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-266">Syntax:</span></span>

```Syntax
function [<scope:>]<name> [([type]<$pname1>, [[type]<$pname2>])] {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="if"></a><span data-ttu-id="970a5-267">If</span><span class="sxs-lookup"><span data-stu-id="970a5-267">If</span></span>

<span data-ttu-id="970a5-268">条件付きを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-268">Defines a conditional.</span></span>

<span data-ttu-id="970a5-269">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-269">Syntax:</span></span>

```Syntax
if (<condition>) {<statement list>}
```

### <a name="hidden"></a><span data-ttu-id="970a5-270">[非表示]</span><span class="sxs-lookup"><span data-stu-id="970a5-270">Hidden</span></span>

<span data-ttu-id="970a5-271">コマンドレットの既定の結果、 `Get-Member` および IntelliSense とタブ補完の結果からクラスメンバーを非表示にします。</span><span class="sxs-lookup"><span data-stu-id="970a5-271">Hides class members from the default results of the `Get-Member` cmdlet, and from IntelliSense and tab completion results.</span></span>

<span data-ttu-id="970a5-272">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-272">Syntax:</span></span>

```Syntax
Hidden [data type] $member_name
```

### <a name="in"></a><span data-ttu-id="970a5-273">/</span><span class="sxs-lookup"><span data-stu-id="970a5-273">In</span></span>

<span data-ttu-id="970a5-274">`ForEach`コレクションの各メンバーを使用するループを作成するために、ステートメントで使用されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-274">Used in a `ForEach` statement to create a loop that uses each member of a collection.</span></span>

<span data-ttu-id="970a5-275">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-275">Syntax:</span></span>

```Syntax
ForEach (<item> in <collection>){<statement list>}
```

### <a name="inlinescript"></a><span data-ttu-id="970a5-276">InlineScript</span><span class="sxs-lookup"><span data-stu-id="970a5-276">InlineScript</span></span>

<span data-ttu-id="970a5-277">共有 PowerShell セッションでワークフローコマンドを実行します。</span><span class="sxs-lookup"><span data-stu-id="970a5-277">Runs workflow commands in a shared PowerShell session.</span></span> <span data-ttu-id="970a5-278">このキーワードは、PowerShell ワークフローでのみ有効です。</span><span class="sxs-lookup"><span data-stu-id="970a5-278">This keyword is valid only in a PowerShell Workflow.</span></span>

<span data-ttu-id="970a5-279">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-279">Syntax:</span></span>

```Syntax
workflow <verb>-<noun>
{
   InlineScript
   {
      <Command/Expression>
      ...

   }
}
```

<span data-ttu-id="970a5-280">キーワードは、 `InlineScript` `InlineScript` 共有された標準 (非ワークフロー) セッションでコマンドを実行するアクティビティを示します。</span><span class="sxs-lookup"><span data-stu-id="970a5-280">The `InlineScript` keyword indicates an `InlineScript` activity, which runs commands in a shared standard (non-workflow) session.</span></span> <span data-ttu-id="970a5-281">キーワードを使用して、 `InlineScript` ワークフローでは有効でないコマンドを実行したり、データを共有するコマンドを実行したりできます。</span><span class="sxs-lookup"><span data-stu-id="970a5-281">You can use the `InlineScript` keyword to run commands that are not otherwise valid in a workflow, and to run commands that share data.</span></span> <span data-ttu-id="970a5-282">既定では、InlineScript スクリプトブロック内のコマンドは別のプロセスで実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-282">By default, the commands in an InlineScript script block run in a separate process.</span></span>

<span data-ttu-id="970a5-283">詳細については、「 [ワークフローでの PowerShell コマンドの実行](/previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/jj574197(v=ws.11))」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="970a5-283">For more information, see [Running PowerShell Commands in a Workflow](/previous-versions/windows/it-pro/windows-server-2012-R2-and-2012/jj574197(v=ws.11)).</span></span>

### <a name="param"></a><span data-ttu-id="970a5-284">Param</span><span class="sxs-lookup"><span data-stu-id="970a5-284">Param</span></span>

<span data-ttu-id="970a5-285">関数のパラメーターを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-285">Defines the parameters in a function.</span></span>

<span data-ttu-id="970a5-286">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-286">Syntax:</span></span>

```Syntax
function [<scope:>]<name> {
   param ([type]<$pname1>[, [[type]<$pname2>]])
   <statement list>
}
```

### <a name="process"></a><span data-ttu-id="970a5-287">プロセス</span><span class="sxs-lookup"><span data-stu-id="970a5-287">Process</span></span>

<span data-ttu-id="970a5-288">、、およびの各キーワードと共に、関数本体の一部を指定し `DynamicParam` `Begin` `End` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-288">Specifies a part of the body of a function, along with the `DynamicParam`, `Begin`, and `End` keywords.</span></span> <span data-ttu-id="970a5-289">`Process`ステートメントリストがパイプラインからの入力を受け取ると、 `Process` パイプラインの各要素に対してステートメントリストが1回実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-289">When a `Process` statement list receives input from the pipeline, the `Process` statement list runs one time for each element from the pipeline.</span></span> <span data-ttu-id="970a5-290">パイプラインがオブジェクトを提供しない場合、 `Process` ステートメントの一覧は実行されません。</span><span class="sxs-lookup"><span data-stu-id="970a5-290">If the pipeline provides no objects, the `Process` statement list does not run.</span></span> <span data-ttu-id="970a5-291">コマンドがパイプラインの最初のコマンドである場合、 `Process` ステートメントリストは1回だけ実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-291">If the command is the first command in the pipeline, the `Process` statement list runs one time.</span></span>

<span data-ttu-id="970a5-292">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-292">Syntax:</span></span>

```Syntax
function <name> {
   DynamicParam {<statement list>}
   begin {<statement list>}
   process {<statement list>}
   end {<statement list>}
}
```

### <a name="return"></a><span data-ttu-id="970a5-293">戻り値</span><span class="sxs-lookup"><span data-stu-id="970a5-293">Return</span></span>

<span data-ttu-id="970a5-294">PowerShell を使用して、スクリプトや関数などの現在のスコープをそのままにし、省略可能な式を出力に書き込みます。</span><span class="sxs-lookup"><span data-stu-id="970a5-294">Causes PowerShell to leave the current scope, such as a script or function, and writes the optional expression to the output.</span></span>

<span data-ttu-id="970a5-295">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-295">Syntax:</span></span>

```Syntax
return [<expression>]
```

### <a name="static"></a><span data-ttu-id="970a5-296">静的</span><span class="sxs-lookup"><span data-stu-id="970a5-296">Static</span></span>

<span data-ttu-id="970a5-297">が定義されているクラスのすべてのインスタンスに共通するプロパティまたはメソッドを指定します。</span><span class="sxs-lookup"><span data-stu-id="970a5-297">Specifies the property or method defined is common to all instances of the class in which is defined.</span></span>

<span data-ttu-id="970a5-298">`Class`使用例については、「」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="970a5-298">See `Class` for usage examples.</span></span>

### <a name="switch"></a><span data-ttu-id="970a5-299">Switch</span><span class="sxs-lookup"><span data-stu-id="970a5-299">Switch</span></span>

<span data-ttu-id="970a5-300">複数の条件を確認するには、ステートメントを使用し `Switch` ます。</span><span class="sxs-lookup"><span data-stu-id="970a5-300">To check multiple conditions, use a `Switch` statement.</span></span> <span data-ttu-id="970a5-301">`Switch`ステートメントは一連のステートメントに相当しますが、より `If` 簡単です。</span><span class="sxs-lookup"><span data-stu-id="970a5-301">The `Switch` statement is equivalent to a series of `If` statements, but it is simpler.</span></span>

<span data-ttu-id="970a5-302">ステートメントでは、 `Switch` 各条件とオプションのアクションが一覧表示されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-302">The `Switch` statement lists each condition and an optional action.</span></span> <span data-ttu-id="970a5-303">条件がを取得すると、アクションが実行されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-303">If a condition obtains, the action is performed.</span></span>

<span data-ttu-id="970a5-304">構文 1:</span><span class="sxs-lookup"><span data-stu-id="970a5-304">Syntax 1:</span></span>

```Syntax
switch [-regex|-wildcard|-exact][-casesensitive] ( <value> )
{
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   ...

   default {<statement list>}
}
```

<span data-ttu-id="970a5-305">構文 2:</span><span class="sxs-lookup"><span data-stu-id="970a5-305">Syntax 2:</span></span>

```Syntax
switch [-regex|-wildcard|-exact][-casesensitive] -file <filename>
{
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   <string>|<number>|<variable>|{ <expression> } {<statement list>}
   ...

   default {<statement list>}
}
```

### <a name="throw"></a><span data-ttu-id="970a5-306">Throw</span><span class="sxs-lookup"><span data-stu-id="970a5-306">Throw</span></span>

<span data-ttu-id="970a5-307">オブジェクトをエラーとしてスローします。</span><span class="sxs-lookup"><span data-stu-id="970a5-307">Throws an object as an error.</span></span>

<span data-ttu-id="970a5-308">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-308">Syntax:</span></span>

```Syntax
throw [<object>]
```

### <a name="trap"></a><span data-ttu-id="970a5-309">Trap</span><span class="sxs-lookup"><span data-stu-id="970a5-309">Trap</span></span>

<span data-ttu-id="970a5-310">エラーが発生した場合に実行されるステートメントリストを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-310">Defines a statement list to be run if an error is encountered.</span></span> <span data-ttu-id="970a5-311">エラーの種類には角かっこが必要です。</span><span class="sxs-lookup"><span data-stu-id="970a5-311">An error type requires brackets.</span></span> <span data-ttu-id="970a5-312">2番目のかっこのペアは、エラーの種類が省略可能であることを示します。</span><span class="sxs-lookup"><span data-stu-id="970a5-312">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="970a5-313">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-313">Syntax:</span></span>

```Syntax
trap [[<error type>]] {<statement list>}
```

### <a name="try"></a><span data-ttu-id="970a5-314">試す</span><span class="sxs-lookup"><span data-stu-id="970a5-314">Try</span></span>

<span data-ttu-id="970a5-315">ステートメントの実行中にエラーをチェックするステートメントリストを定義します。</span><span class="sxs-lookup"><span data-stu-id="970a5-315">Defines a statement list to be checked for errors while the statements run.</span></span> <span data-ttu-id="970a5-316">エラーが発生した場合、PowerShell `Catch` はまたはステートメントで実行を継続 `Finally` します。</span><span class="sxs-lookup"><span data-stu-id="970a5-316">If an error occurs, PowerShell continues running in a `Catch` or `Finally` statement.</span></span> <span data-ttu-id="970a5-317">エラーの種類には角かっこが必要です。</span><span class="sxs-lookup"><span data-stu-id="970a5-317">An error type requires brackets.</span></span> <span data-ttu-id="970a5-318">2番目のかっこのペアは、エラーの種類が省略可能であることを示します。</span><span class="sxs-lookup"><span data-stu-id="970a5-318">The second pair of brackets indicates that the error type is optional.</span></span>

<span data-ttu-id="970a5-319">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-319">Syntax:</span></span>

```Syntax
try {<statement list>}
catch [[<error type>]] {<statement list>}
finally {<statement list>}
```

### <a name="until"></a><span data-ttu-id="970a5-320">Until</span><span class="sxs-lookup"><span data-stu-id="970a5-320">Until</span></span>

<span data-ttu-id="970a5-321">ステートメント `Do` リストが少なくとも1回実行されるループ構造として、ステートメントで使用されます。</span><span class="sxs-lookup"><span data-stu-id="970a5-321">Used in a `Do` statement as a looping construct where the statement list is executed at least one time.</span></span>

<span data-ttu-id="970a5-322">構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-322">Syntax:</span></span>

```Syntax
do {<statement list>} until (<condition>)
```

### <a name="using"></a><span data-ttu-id="970a5-323">使用</span><span class="sxs-lookup"><span data-stu-id="970a5-323">Using</span></span>

<span data-ttu-id="970a5-324">セッションで使用されている名前空間を示すことができます。</span><span class="sxs-lookup"><span data-stu-id="970a5-324">Allows to indicate which namespaces are used in the session.</span></span> <span data-ttu-id="970a5-325">クラスとメンバーは、それを説明するために、少ない入力を必要とします。</span><span class="sxs-lookup"><span data-stu-id="970a5-325">Classes and members require less typing to mention them.</span></span> <span data-ttu-id="970a5-326">モジュールのクラスを含めることもできます。</span><span class="sxs-lookup"><span data-stu-id="970a5-326">You can also include classes from modules.</span></span>

<span data-ttu-id="970a5-327">構文 #1:</span><span class="sxs-lookup"><span data-stu-id="970a5-327">Syntax #1:</span></span>

```Syntax
using namespace <.Net-framework-namespace>
```

<span data-ttu-id="970a5-328">構文 #2:</span><span class="sxs-lookup"><span data-stu-id="970a5-328">Syntax #2:</span></span>

```Syntax
using module <module-name>
```

### <a name="while"></a><span data-ttu-id="970a5-329">While</span><span class="sxs-lookup"><span data-stu-id="970a5-329">While</span></span>

<span data-ttu-id="970a5-330">ステートメントは、 `while` ステートメントが実行される前に条件がテストされるループ構造です。</span><span class="sxs-lookup"><span data-stu-id="970a5-330">The `while` statement is a looping construct where the condition is tested before the statements are executed.</span></span> <span data-ttu-id="970a5-331">条件が FALSE の場合、ステートメントは実行されません。</span><span class="sxs-lookup"><span data-stu-id="970a5-331">If the condition is FALSE, then the statements do not execute.</span></span>

<span data-ttu-id="970a5-332">ステートメントの構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-332">Statement syntax:</span></span>

```Syntax
while (<condition>) {
   <statements>
 }
```

<span data-ttu-id="970a5-333">ステートメントで使用される場合 `Do` 、 `while` は、ステートメントリストが少なくとも1回実行されるループ構造の一部です。</span><span class="sxs-lookup"><span data-stu-id="970a5-333">When used in a `Do` statement, `while` is part of a looping construct where the statement list is executed at least one time.</span></span>

<span data-ttu-id="970a5-334">Do ループ構文:</span><span class="sxs-lookup"><span data-stu-id="970a5-334">Do loop Syntax:</span></span>

```Syntax
do {<statement list>} while (<condition>)
```

## <a name="see-also"></a><span data-ttu-id="970a5-335">関連項目</span><span class="sxs-lookup"><span data-stu-id="970a5-335">SEE ALSO</span></span>

- [<span data-ttu-id="970a5-336">about_Special_Characters</span><span class="sxs-lookup"><span data-stu-id="970a5-336">about_Special_Characters</span></span>](about_Special_Characters.md)
- [<span data-ttu-id="970a5-337">about_Wildcards</span><span class="sxs-lookup"><span data-stu-id="970a5-337">about_Wildcards</span></span>](about_Wildcards.md)
